# [#8678] [#8675] [#8648] [topic,245507] Fixed min-width CSS issue forcing scrollbars
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@9721 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/khepri/css/general.css
+++ b/administrator/templates/khepri/css/general.css
@@ -30,7 +30,9 @@ body {
 
 body, td, th { font-family: Arial, Helvetica, sans-serif; }
 
-html, body { height: 95%; min-width: 1040px;}
+html, body { height: 95%; }
+
+#minwidth { min-width: 1000px; }
 
 .clr { clear: both; overflow:hidden; height: 0; }
 
